fix: Update title and branding from Escrita360 to Text79; change background color of target audience section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escrita360 - A plataforma mais completa para o desenvolvimento da escrita</title>
+    <title>Text79 - A plataforma mais completa para o desenvolvimento da escrita</title>
     <meta name="description" content="Plataforma completa para desenvolvimento da escrita unindo autorregulação e IA para estudantes, professores e escolas">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-                        <h2>Escrita360</h2>
+                        <h2>Text79</h2>
                     </div>
                     <ul class="nav-menu">
                         <li><a href="#recursos">Recursos</a></li>
@@ -102,7 +102,7 @@
     <section id="para-quem" class="target-audience">
         <div class="container">
             <div class="section-header">
-                <h2>Para Quem é o Escrita360?</h2>
+                <h2>Para Quem é o Text79?</h2>
                 <p class="section-subtitle">Uma solução completa que atende diferentes públicos no ecossistema educacional</p>
             </div>
             <div class="audience-grid">
@@ -154,7 +154,7 @@
                         <i class="fas fa-brain"></i>
                     </div>
                     <h3>Escrita Autorregulada no Centro</h3>
-                    <p>Diferente de plataformas que apenas corrigem textos prontos, a Escrita360 coloca a autorregulação como eixo principal. O estudante vivencia todo o processo de escrita.</p>
+                    <p>Diferente de plataformas que apenas corrigem textos prontos, a  coloca a autorregulação como eixo principal. O estudante vivencia todo o processo de escrita.</p>
                 </div>
                 <div class="diferencial-item">
                     <div class="diferencial-icon">
@@ -423,7 +423,7 @@
     <section class="cta">
         <div class="container">
             <div class="cta-content">
-                <h2>Escrita360: muito além da correção automática</h2>
+                <h2>Text79: muito além da correção automática</h2>
                 <p>Uma jornada completa de escrita autorregulada que garante autonomia e evolução ao aluno, oferece recursos que otimizam o tempo do professor e disponibiliza dashboards personalizados para a escola, alinhados à preparação para o ENEM.</p>
                 <p>A plataforma valoriza o processo formativo de escrever, revisar e reescrever. A IA atua apenas na etapa final, como suporte complementar, fortalecendo o aprendizado e não substituindo o percurso formativo.</p>
                 <a href="#" class="btn btn-primary btn-large">Começar Agora</a>
@@ -436,7 +436,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Escrita360</h3>
+                    <h3>Text79</h3>
                     <p>A plataforma de redações mais completa para ENEM e vestibulares.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -473,7 +473,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Escrita360. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Text79. Todos os direitos reservados.</p>
                 <a href="#" class="whatsapp-link">
                     <i class="fab fa-whatsapp"></i>
                     Fale conosco pelo WhatsApp
