feat: Add new features section with detailed descriptions and testimonials

--- a/index.html
+++ b/index.html
@@ -147,6 +147,223 @@
         </div>
     </section>
 
+    <!-- Features Section -->
+    <section class="features-section">
+        <div class="container">
+            <h2 class="section-title fade-in">Recursos que Transformam o Aprendizado</h2>
+            <p class="section-subtitle fade-in">Ferramentas desenvolvidas com base em pesquisas pedagógicas e tecnologia de ponta</p>
+            <div class="features-grid">
+                <div class="feature-card hover-lift">
+                    <div class="feature-icon-wrapper">
+                        <i class="fas fa-edit"></i>
+                    </div>
+                    <h3>Editor Inteligente</h3>
+                    <p>Escreva com recursos de formatação profissional e sugestões em tempo real que respeitam seu processo criativo.</p>
+                    <a href="recursos.html" class="feature-link">Saiba mais <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="feature-card hover-lift">
+                    <div class="feature-icon-wrapper">
+                        <i class="fas fa-tasks"></i>
+                    </div>
+                    <h3>Rubricas Personalizadas</h3>
+                    <p>Avalie seu texto com critérios claros e objetivos baseados nas competências do ENEM e vestibulares.</p>
+                    <a href="recursos.html" class="feature-link">Saiba mais <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="feature-card hover-lift">
+                    <div class="feature-icon-wrapper">
+                        <i class="fas fa-chart-pie"></i>
+                    </div>
+                    <h3>Dashboard Completo</h3>
+                    <p>Acompanhe sua evolução com gráficos detalhados e relatórios de desempenho por competência.</p>
+                    <a href="recursos.html" class="feature-link">Saiba mais <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="feature-card hover-lift">
+                    <div class="feature-icon-wrapper">
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <h3>Gestão Escolar</h3>
+                    <p>Ferramentas completas para professores acompanharem turmas e instituições gerenciarem dados educacionais.</p>
+                    <a href="para-quem.html" class="feature-link">Saiba mais <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- How It Works Section -->
+    <section class="how-it-works">
+        <div class="container">
+            <h2 class="section-title fade-in">Como Funciona o Text79</h2>
+            <p class="section-subtitle fade-in">Um processo simples que respeita sua autonomia</p>
+            <div class="steps-grid">
+                <div class="step-item">
+                    <div class="step-number">1</div>
+                    <div class="step-icon">
+                        <i class="fas fa-pencil-alt"></i>
+                    </div>
+                    <h3>Planejamento</h3>
+                    <p>Organize suas ideias e estruture seu texto com ferramentas de planejamento que facilitam o processo criativo.</p>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">2</div>
+                    <div class="step-icon">
+                        <i class="fas fa-keyboard"></i>
+                    </div>
+                    <h3>Escrita</h3>
+                    <p>Escreva seu texto no editor inteligente com suporte ao parágrafo-padrão e recursos de formatação profissional.</p>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">3</div>
+                    <div class="step-icon">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                    <h3>Autoavaliação</h3>
+                    <p>Revise seu texto usando rubricas estruturadas e desenvolva senso crítico sobre sua própria escrita.</p>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">4</div>
+                    <div class="step-icon">
+                        <i class="fas fa-robot"></i>
+                    </div>
+                    <h3>Feedback IA</h3>
+                    <p>Receba análise complementar da inteligência artificial com sugestões de melhoria específicas e construtivas.</p>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">5</div>
+                    <div class="step-icon">
+                        <i class="fas fa-sync-alt"></i>
+                    </div>
+                    <h3>Reescrita</h3>
+                    <p>Aplique as melhorias identificadas e desenvolva autonomia no processo de revisão e aperfeiçoamento textual.</p>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">6</div>
+                    <div class="step-icon">
+                        <i class="fas fa-trophy"></i>
+                    </div>
+                    <h3>Evolução</h3>
+                    <p>Acompanhe seu progresso ao longo do tempo e veja sua escrita evoluir com dados concretos e mensuráveis.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="testimonials">
+        <div class="container">
+            <h2 class="section-title fade-in">O que dizem sobre o Text79</h2>
+            <p class="section-subtitle fade-in">Histórias reais de transformação no aprendizado da escrita</p>
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <div class="testimonial-avatar">
+                            <i class="fas fa-user-graduate"></i>
+                        </div>
+                        <div class="testimonial-info">
+                            <h4>Maria Silva</h4>
+                            <p>Estudante - Aprovada em Medicina</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p class="testimonial-text">"O Text79 foi fundamental na minha aprovação. Melhorei minha nota de redação de 680 para 920 pontos em apenas 4 meses. A metodologia de autorregulação me ensinou a revisar meus textos de forma crítica."</p>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <div class="testimonial-avatar">
+                            <i class="fas fa-chalkboard-teacher"></i>
+                        </div>
+                        <div class="testimonial-info">
+                            <h4>Prof. João Santos</h4>
+                            <p>Professor de Redação - Colégio Exemplo</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p class="testimonial-text">"Como professor, economizo horas de correção e consigo acompanhar o desenvolvimento de cada aluno de forma individual. Os dashboards facilitam muito meu trabalho e a identificação de dificuldades específicas."</p>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <div class="testimonial-avatar">
+                            <i class="fas fa-school"></i>
+                        </div>
+                        <div class="testimonial-info">
+                            <h4>Carla Mendes</h4>
+                            <p>Coordenadora Pedagógica</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p class="testimonial-text">"Implementamos o Text79 em nossa escola e os resultados são impressionantes. A plataforma oferece dados valiosos para tomada de decisões pedagógicas e nossos alunos estão mais engajados com a escrita."</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Comparison Section -->
+    <section class="comparison-section">
+        <div class="container">
+            <h2 class="section-title fade-in">Por que escolher o Text79?</h2>
+            <p class="section-subtitle fade-in">Veja como nos diferenciamos de outras plataformas de redação</p>
+            <div class="comparison-table">
+                <div class="comparison-header">
+                    <div class="comparison-feature">Recursos</div>
+                    <div class="comparison-text79">Text79</div>
+                    <div class="comparison-others">Outras Plataformas</div>
+                </div>
+                <div class="comparison-row">
+                    <div class="comparison-feature">Escrita Autorregulada</div>
+                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
+                    <div class="comparison-others"><i class="fas fa-times-circle"></i></div>
+                </div>
+                <div class="comparison-row">
+                    <div class="comparison-feature">Painel de Sentimentos</div>
+                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
+                    <div class="comparison-others"><i class="fas fa-times-circle"></i></div>
+                </div>
+                <div class="comparison-row">
+                    <div class="comparison-feature">Rubricas Autoavaliativas</div>
+                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
+                    <div class="comparison-others"><i class="fas fa-minus-circle"></i></div>
+                </div>
+                <div class="comparison-row">
+                    <div class="comparison-feature">Processo Completo de Escrita</div>
+                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
+                    <div class="comparison-others"><i class="fas fa-times-circle"></i></div>
+                </div>
+                <div class="comparison-row">
+                    <div class="comparison-feature">IA como Apoio (não substituição)</div>
+                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
+                    <div class="comparison-others"><i class="fas fa-times-circle"></i></div>
+                </div>
+                <div class="comparison-row">
+                    <div class="comparison-feature">Dashboard para Escolas</div>
+                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
+                    <div class="comparison-others"><i class="fas fa-minus-circle"></i></div>
+                </div>
+                <div class="comparison-row">
+                    <div class="comparison-feature">Alinhamento com BNCC</div>
+                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
+                    <div class="comparison-others"><i class="fas fa-minus-circle"></i></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section class="cta">
         <div class="container">
@@ -154,7 +371,10 @@
                 <h2>Text79: muito além da correção automática</h2>
                 <p>Uma jornada completa de escrita autorregulada que garante autonomia e evolução ao aluno, oferece recursos que otimizam o tempo do professor e disponibiliza dashboards personalizados para a escola, alinhados à preparação para o ENEM.</p>
                 <p>A plataforma valoriza o processo formativo de escrever, revisar e reescrever. A IA atua apenas na etapa final, como suporte complementar, fortalecendo o aprendizado e não substituindo o percurso formativo.</p>
-                <a href="precos.html" class="btn btn-primary btn-large">Começar Agora</a>
+                <div class="cta-buttons">
+                    <a href="precos.html" class="btn btn-primary btn-large">Começar Grátis por 7 Dias</a>
+                    <a href="contato.html" class="btn btn-secondary btn-large">Agendar Demonstração</a>
+                </div>
             </div>
         </div>
     </section>
