--- a/contato.html
+++ b/contato.html
@@ -351,11 +351,61 @@
         </div>
     </footer>
 
-    <!-- WhatsApp Float Button -->
-    <div class="whatsapp-float">
-        <a href="#" target="_blank" aria-label="WhatsApp">
-            <i class="fab fa-whatsapp"></i>
-        </a>
+    <!-- Mascot Video Button -->
+    <div class="mascot-float" id="mascotButton">
+        <video autoplay loop muted playsinline class="mascot-video" onerror="this.style.display='none'">
+            <source src="mascot-animation.mp4" type="video/mp4">
+            <source src="mascot-animation.webm" type="video/webm">
+        </video>
+        <div class="mascot-fallback">
+            <i class="fas fa-robot"></i>
+        </div>
+    </div>
+
+    <!-- Chatbot Modal -->
+    <div class="chatbot-modal" id="chatbotModal">
+        <div class="chatbot-container">
+            <div class="chatbot-header">
+                <div class="chatbot-header-content">
+                    <div class="chatbot-avatar">
+                        <video autoplay loop muted playsinline class="avatar-video">
+                            <source src="mascot-animation.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="chatbot-title">
+                        <h3>Text79 Assistant</h3>
+                        <span class="chatbot-status">Online</span>
+                    </div>
+                </div>
+                <button class="chatbot-close" id="closeChatbot">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="chatbot-messages" id="chatbotMessages">
+                <div class="message bot-message">
+                    <div class="message-content">
+                        Olá! 👋 Sou o assistente da Text79. Como posso ajudá-lo hoje?
+                    </div>
+                </div>
+            </div>
+            <div class="chatbot-quick-replies">
+                <button class="quick-reply" data-message="Quero saber sobre os planos">
+                    <i class="fas fa-tag"></i> Ver Planos
+                </button>
+                <button class="quick-reply" data-message="Como funciona a plataforma?">
+                    <i class="fas fa-question-circle"></i> Como Funciona
+                </button>
+                <button class="quick-reply" data-message="Quero agendar uma demonstração">
+                    <i class="fas fa-calendar"></i> Agendar Demo
+                </button>
+            </div>
+            <div class="chatbot-input-container">
+                <input type="text" class="chatbot-input" id="chatbotInput" placeholder="Digite sua mensagem...">
+                <button class="chatbot-send" id="sendMessage">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
