feat: Update navigation links to point to the new home page and add home link to all pages

--- a/home.html
+++ b/home.html
@@ -513,7 +513,7 @@
                 <div class="footer-section">
                     <h4>Text79</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="#">Quem Somos</a></li>
                         <li><a href="recursos.html">Recursos</a></li>
                         <li><a href="precos.html">Preços</a></li>
