--- a/recursos.html
+++ b/recursos.html
@@ -14,9 +14,10 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-                        <a href="index.html"><h2>Text79</h2></a>
+                        <a href="home.html"><h2>Text79</h2></a>
                     </div>
                     <ul class="nav-menu">
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="recursos.html" class="active">Recursos</a></li>
                         <li><a href="precos.html">Preços</a></li>
                         <li><a href="para-quem.html">Para Quem</a></li>
