--- a/recursos.html
+++ b/recursos.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-                        <a href="home.html"><h2>Text79</h2></a>
+                        <a href="home.html"><img src="assets/logo2.svg" alt="Text79 Logo"></a>
                     </div>
                     <ul class="nav-menu">
                         <li><a href="home.html">Home</a></li>
