feat: Add pages-styles.css for specific page styling and update mascot fallback to use an image

--- a/recursos.html
+++ b/recursos.html
@@ -6,6 +6,7 @@
     <title>Recursos - Text79</title>
     <meta name="description" content="Conheça todos os recursos da plataforma Text79 para estudantes, professores e escolas">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pages-styles.css">
 </head>
 <body class="page-recursos">
     <!-- Header -->
@@ -415,7 +416,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <i class="fas fa-robot"></i>
+            <img src="assets/robo.svg" alt="Robô Text79">
         </div>
     </div>
 
