--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <title>Contato - Text79</title>
     <meta name="description" content="Entre em contato com a Text79. Estamos prontos para ajudar você a transformar a escrita">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pages-styles.css">
 </head>
 <body class="page-contato">
     <!-- Header -->
@@ -356,7 +357,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <i class="fas fa-robot"></i>
+            <img src="assets/robo.svg" alt="Robô Text79">
         </div>
     </div>
 
