--- a/home.html
+++ b/home.html
@@ -556,7 +556,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <i class="fas fa-robot"></i>
+            <img src="assets/robo.svg" alt="Robô Text79">
         </div>
     </div>
 
