--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pages-styles.css">
 </head>
 <body class="page-home">
     <!-- Header -->
@@ -556,7 +557,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <i class="fas fa-robot"></i>
+            <img src="assets/robo.svg" alt="Robô Text79">
         </div>
     </div>
 
