--- a/para-quem.html
+++ b/para-quem.html
@@ -6,6 +6,7 @@
     <title>Para Quem - Text79</title>
     <meta name="description" content="Descubra como a Text79 atende estudantes, professores, escolas e cursos preparatórios">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pages-styles.css">
 </head>
 <body class="page-para-quem">
     <!-- Header -->
@@ -430,7 +431,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <i class="fas fa-robot"></i>
+            <img src="assets/robo.svg" alt="Robô Text79">
         </div>
     </div>
 
