--- a/precos.html
+++ b/precos.html
@@ -6,6 +6,7 @@
     <title>Preços - Text79</title>
     <meta name="description" content="Planos flexíveis e acessíveis para estudantes, professores e escolas">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pages-styles.css">
 </head>
 <body class="page-precos">
     <!-- Header -->
@@ -377,7 +378,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <i class="fas fa-robot"></i>
+            <img src="assets/robo.svg" alt="Robô Text79">
         </div>
     </div>
 
