feat: Implement floating chatbot button across all pages with animations and styles

--- a/index.html
+++ b/index.html
@@ -701,5 +701,10 @@
             counters.forEach(counter => counterObserver.observe(counter));
         });
     </script>
+
+    <!-- Floating Chatbot Button -->
+    <button class="floating-chatbot" aria-label="Abrir chat de ajuda">
+        <img src="assets/robo.svg" alt="Assistente Virtual">
+    </button>
 </body>
 </html>
