--- a/precos.html
+++ b/precos.html
@@ -438,6 +438,11 @@
         </div>
     </div>
 
+    <!-- Floating Chatbot Button -->
+    <button class="floating-chatbot" aria-label="Abrir chat de ajuda">
+        <img src="assets/robo.svg" alt="Assistente Virtual">
+    </button>
+
     <script src="script.js"></script>
 </body>
 </html>
