--- a/home.html
+++ b/home.html
@@ -700,5 +700,10 @@
             counters.forEach(counter => counterObserver.observe(counter));
         });
     </script>
+
+    <!-- Floating Chatbot Button -->
+    <button class="floating-chatbot" aria-label="Abrir chat de ajuda">
+        <img src="assets/robo.svg" alt="Assistente Virtual">
+    </button>
 </body>
 </html>
