feat: Update branding from Text79 to Escrita360 across multiple HTML files for consistent identity

--- a/para-quem.html
+++ b/para-quem.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Quem - Text79</title>
-    <meta name="description" content="Descubra como a Text79 atende estudantes, professores, escolas e cursos preparatórios">
-    
+    <title>Para Quem - Escrita360</title>
+    <meta name="description" content="Descubra como a Escrita360 atende estudantes, professores, escolas e cursos preparatórios">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-                        <a href="home.html"><img src="assets/logo2.svg" alt="Text79 Logo"></a>
+                        <a href="home.html"><img src="assets/logo2.svg" alt="Escrita360 Logo"></a>
                     </div>
                     <ul class="nav-menu">
                         <li><a href="home.html">Home</a></li>
@@ -99,7 +99,7 @@
 
                         <div class="testimonial">
                             <div class="testimonial-content">
-                                <p>"A Text79 mudou completamente minha forma de escrever. Antes eu só escrevia e esperava a nota. Agora eu entendo o processo e consigo melhorar sozinho!"</p>
+                                <p>"A Escrita360 mudou completamente minha forma de escrever. Antes eu só escrevia e esperava a nota. Agora eu entendo o processo e consigo melhorar sozinho!"</p>
                                 <div class="testimonial-author">
                                     <strong>Maria Silva</strong>
                                     <span>Estudante, nota 960 no ENEM</span>
@@ -166,7 +166,7 @@
 
                         <div class="testimonial">
                             <div class="testimonial-content">
-                                <p>"Como professor de cursinho, a Text79 me deu tempo de vida de volta. Consigo acompanhar melhor meus alunos e ainda tenho relatórios prontos para os pais."</p>
+                                <p>"Como professor de cursinho, a Escrita360 me deu tempo de vida de volta. Consigo acompanhar melhor meus alunos e ainda tenho relatórios prontos para os pais."</p>
                                 <div class="testimonial-author">
                                     <strong>Prof. João Santos</strong>
                                     <span>Professor de Redação há 12 anos</span>
@@ -245,7 +245,7 @@
 
                         <div class="testimonial">
                             <div class="testimonial-content">
-                                <p>"Implementamos a Text79 em toda a rede e os resultados superaram expectativas. Os alunos estão mais engajados e os professores mais satisfeitos."</p>
+                                <p>"Implementamos a Escrita360 em toda a rede e os resultados superaram expectativas. Os alunos estão mais engajados e os professores mais satisfeitos."</p>
                                 <div class="testimonial-author">
                                     <strong>Dra. Ana Paula Oliveira</strong>
                                     <span>Diretora Pedagógica, Colégio Exemplo</span>
@@ -313,7 +313,7 @@
 
                         <div class="testimonial">
                             <div class="testimonial-content">
-                                <p>"Nossa taxa de aprovação aumentou 40% após adotarmos a Text79. Os alunos chegam no ENEM muito mais preparados e confiantes."</p>
+                                <p>"Nossa taxa de aprovação aumentou 40% após adotarmos a Escrita360. Os alunos chegam no ENEM muito mais preparados e confiantes."</p>
                                 <div class="testimonial-author">
                                     <strong>Carlos Eduardo</strong>
                                     <span>Coordenador, Cursinho Aprovação Total</span>
@@ -388,7 +388,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Text79</h3>
+                    <h3>Escrita360</h3>
                     <p>A plataforma de redações mais completa para ENEM e vestibulares.</p>
                     <div class="social-links">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
@@ -425,7 +425,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Text79. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Escrita360. Todos os direitos reservados.</p>
                 <a href="#" class="whatsapp-link">
                     <i class="fab fa-whatsapp"></i>
                     Fale conosco pelo WhatsApp
@@ -441,7 +441,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <img src="assets/robo.svg" alt="Robô Text79">
+            <img src="assets/robo.svg" alt="Robô Escrita360">
         </div>
     </div>
 
@@ -456,7 +456,7 @@
                         </video>
                     </div>
                     <div class="chatbot-title">
-                        <h3>Text79 Assistant</h3>
+                        <h3>Escrita360 Assistant</h3>
                         <span class="chatbot-status">Online</span>
                     </div>
                 </div>
@@ -467,7 +467,7 @@
             <div class="chatbot-messages" id="chatbotMessages">
                 <div class="message bot-message">
                     <div class="message-content">
-                        Olá! 👋 Sou o assistente da Text79. Como posso ajudá-lo hoje?
+                        Olá! 👋 Sou o assistente da Escrita360. Como posso ajudá-lo hoje?
                     </div>
                 </div>
             </div>
