--- a/precos.html
+++ b/precos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preços - Text79</title>
+    <title>Preços - Escrita360</title>
     <meta name="description" content="Planos flexíveis e acessíveis para estudantes, professores e escolas">
     
     <!-- Google Fonts -->
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-                        <a href="home.html"><img src="assets/logo2.svg" alt="Text79 Logo"></a>
+                        <a href="home.html"><img src="assets/logo2.svg" alt="Escrita360 Logo"></a>
                     </div>
                     <ul class="nav-menu">
                         <li><a href="home.html">Home</a></li>
@@ -335,7 +335,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Text79</h3>
+                    <h3>Escrita360</h3>
                     <p>A plataforma de redações mais completa para ENEM e vestibulares.</p>
                     <div class="social-links">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
@@ -372,7 +372,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Text79. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Escrita360. Todos os direitos reservados.</p>
                 <a href="#" class="whatsapp-link">
                     <i class="fab fa-whatsapp"></i>
                     Fale conosco pelo WhatsApp
@@ -388,7 +388,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <img src="assets/robo.svg" alt="Robô Text79">
+            <img src="assets/robo.svg" alt="Robô Escrita360">
         </div>
     </div>
 
@@ -403,7 +403,7 @@
                         </video>
                     </div>
                     <div class="chatbot-title">
-                        <h3>Text79 Assistant</h3>
+                        <h3>Escrita360 Assistant</h3>
                         <span class="chatbot-status">Online</span>
                     </div>
                 </div>
@@ -414,7 +414,7 @@
             <div class="chatbot-messages" id="chatbotMessages">
                 <div class="message bot-message">
                     <div class="message-content">
-                        Olá! 👋 Sou o assistente da Text79. Como posso ajudá-lo hoje?
+                        Olá! 👋 Sou o assistente da Escrita360. Como posso ajudá-lo hoje?
                     </div>
                 </div>
             </div>
