--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Text79</title>
-    <meta name="description" content="Entre em contato com a Text79. Estamos prontos para ajudar você a transformar a escrita">
-    
+    <title>Contato - Escrita360</title>
+    <meta name="description" content="Entre em contato com a Escrita360. Estamos prontos para ajudar você a transformar a escrita">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-                        <a href="home.html"><img src="assets/logo2.svg" alt="Text79 Logo"></a>
+                        <a href="home.html"><img src="assets/logo2.svg" alt="Escrita360 Logo"></a>
                     </div>
                     <ul class="nav-menu">
                         <li><a href="home.html">Home</a></li>
@@ -119,7 +119,7 @@
 
                         <div class="form-group checkbox-group">
                             <input type="checkbox" id="aceito" name="aceito" required>
-                            <label for="aceito">Aceito receber comunicações da Text79 e concordo com a <a href="#">Política de Privacidade</a></label>
+                            <label for="aceito">Aceito receber comunicações da Escrita360 e concordo com a <a href="#">Política de Privacidade</a></label>
                         </div>
 
                         <button type="submit" class="btn btn-primary btn-large">
@@ -140,7 +140,7 @@
                             </div>
                             <div class="method-content">
                                 <h4>E-mail</h4>
-                                <p>contato@text79.com.br</p>
+                                <p>contato@escrita360.com.br</p>
                                 <p class="method-detail">Respondemos em até 24h</p>
                             </div>
                         </div>
@@ -314,7 +314,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Text79</h3>
+                    <h3>Escrita360</h3>
                     <p>A plataforma de redações mais completa para ENEM e vestibulares.</p>
                     <div class="social-links">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
@@ -351,7 +351,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Text79. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Escrita360. Todos os direitos reservados.</p>
                 <a href="#" class="whatsapp-link">
                     <i class="fab fa-whatsapp"></i>
                     Fale conosco pelo WhatsApp
@@ -367,7 +367,7 @@
             <source src="mascot-animation.webm" type="video/webm">
         </video>
         <div class="mascot-fallback">
-            <img src="assets/robo.svg" alt="Robô Text79">
+            <img src="assets/robo.svg" alt="Robô Escrita360">
         </div>
     </div>
 
@@ -382,7 +382,7 @@
                         </video>
                     </div>
                     <div class="chatbot-title">
-                        <h3>Text79 Assistant</h3>
+                        <h3>Escrita360 Assistant</h3>
                         <span class="chatbot-status">Online</span>
                     </div>
                 </div>
@@ -393,7 +393,7 @@
             <div class="chatbot-messages" id="chatbotMessages">
                 <div class="message bot-message">
                     <div class="message-content">
-                        Olá! 👋 Sou o assistente da Text79. Como posso ajudá-lo hoje?
+                        Olá! 👋 Sou o assistente da Escrita360. Como posso ajudá-lo hoje?
                     </div>
                 </div>
             </div>
