Add pages-specific scripts and styles for enhanced user interactions and animations
- Implemented Intersection Observer for scroll animations on elements with specific classes.
- Added header scroll behavior to change appearance on scroll.
- Created mobile menu toggle functionality with close behavior on link click and outside click.
- Introduced smooth scrolling for anchor links and counter animations for statistics.
- Developed pricing toggle for monthly/yearly views and resource tabs for the "Para Quem" page.
- Implemented FAQ accordion functionality and contact form validation with success/error messages.
- Added parallax effect for hero sections and hover lift effect for interactive elements.
- Included staggered animations for grid items and lazy loading for images.
- Highlighted active navigation links based on the current page.
- Added delay classes for animations and a back-to-top button with visibility based on scroll position.
- Optimized performance with debounce and throttle functions.
- Included console messages for developer insights.
- Created comprehensive styles for various sections including hero, audience, benefits, use cases, testimonials, and CTAs.
- Ensured responsive design across multiple breakpoints.
- Defined animation utilities for fade-in effects and hover interactions.

--- a/home.html
+++ b/home.html
@@ -595,7 +595,8 @@
         </div>
     </div>
 
-    <script src="script.js"></script></script>
+    <script src="script.js"></script>
+    <script src="pages-scripts.js"></script>
     
     <!-- Simple Animation Script -->
     <script>
