--- a/index.html
+++ b/index.html
@@ -597,6 +597,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="pages-scripts.js"></script>
     
     <!-- Simple Animation Script -->
     <script>
