--- a/para-quem.html
+++ b/para-quem.html
@@ -480,6 +480,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script></script>
+    <script src="script.js"></script>
+    <script src="pages-scripts.js"></script>
 </body>
 </html>
