--- a/precos.html
+++ b/precos.html
@@ -535,6 +535,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script></script>
+    <script src="script.js"></script>
+    <script src="pages-scripts.js"></script>
 </body>
 </html>
