--- a/para-quem.html
+++ b/para-quem.html
@@ -16,6 +16,7 @@
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pages-styles.css">
 </head>
 <body class="page-para-quem">
     <!-- Header -->
