--- a/contato.html
+++ b/contato.html
@@ -171,24 +171,16 @@
                         <h3>Siga-nos nas redes sociais</h3>
                         <div class="social-links-large">
                             <a href="#" class="social-link" aria-label="Facebook">
-                                <i class="fab fa-facebook"></i>
+                                <img src="assets/facebook.svg" alt="Facebook">
                                 <span>Facebook</span>
                             </a>
                             <a href="#" class="social-link" aria-label="Instagram">
-                                <i class="fab fa-instagram"></i>
+                                <img src="assets/instagram.svg" alt="Instagram">
                                 <span>Instagram</span>
                             </a>
-                            <a href="#" class="social-link" aria-label="LinkedIn">
-                                <i class="fab fa-linkedin"></i>
-                                <span>LinkedIn</span>
-                            </a>
-                            <a href="#" class="social-link" aria-label="YouTube">
-                                <i class="fab fa-youtube"></i>
-                                <span>YouTube</span>
-                            </a>
-                            <a href="#" class="social-link" aria-label="Twitter">
-                                <i class="fab fa-twitter"></i>
-                                <span>Twitter</span>
+                            <a href="#" class="social-link" aria-label="WhatsApp">
+                                <img src="assets/whatsapp.svg" alt="WhatsApp">
+                                <span>WhatsApp</span>
                             </a>
                         </div>
                     </div>
