feat: implement styled comparison table with responsive design and animated logo

--- a/home.html
+++ b/home.html
@@ -366,11 +366,6 @@
                 <div class="partner-logo">
                     <i class="fas fa-university"></i>
                     <span>Rede de Ensino</span>
-                </div>
-                <div class="partner-logo">
-                    <i class="fas fa-school"></i>
-                    <span>Centro Pedagógico</span>
-                </div>
             </div>
         </div>
     </section>
@@ -434,47 +429,55 @@
         <div class="container">
             <h2 class="section-title fade-in">Por que escolher o Escrita360?</h2>
             <p class="section-subtitle fade-in">Veja como nos diferenciamos de outras plataformas de redação</p>
-            <div class="comparison-table">
-                <div class="comparison-header">
-                    <div class="comparison-feature">Recursos</div>
-                    <div class="comparison-text79">Escrita360</div>
-                    <div class="comparison-others">Outras Plataformas</div>
-                </div>
-                <div class="comparison-row">
-                    <div class="comparison-feature">Escrita Autorregulada</div>
-                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
-                    <div class="comparison-others"><i class="fas fa-times-circle"></i></div>
-                </div>
-                <div class="comparison-row">
-                    <div class="comparison-feature">Painel de Sentimentos</div>
-                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
-                    <div class="comparison-others"><i class="fas fa-times-circle"></i></div>
-                </div>
-                <div class="comparison-row">
-                    <div class="comparison-feature">Rubricas Autoavaliativas</div>
-                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
-                    <div class="comparison-others"><i class="fas fa-minus-circle"></i></div>
-                </div>
-                <div class="comparison-row">
-                    <div class="comparison-feature">Processo Completo de Escrita</div>
-                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
-                    <div class="comparison-others"><i class="fas fa-times-circle"></i></div>
-                </div>
-                <div class="comparison-row">
-                    <div class="comparison-feature">IA como Apoio (não substituição)</div>
-                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
-                    <div class="comparison-others"><i class="fas fa-times-circle"></i></div>
-                </div>
-                <div class="comparison-row">
-                    <div class="comparison-feature">Dashboard para Escolas</div>
-                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
-                    <div class="comparison-others"><i class="fas fa-minus-circle"></i></div>
-                </div>
-                <div class="comparison-row">
-                    <div class="comparison-feature">Alinhamento com BNCC</div>
-                    <div class="comparison-text79"><i class="fas fa-check-circle"></i></div>
-                    <div class="comparison-others"><i class="fas fa-minus-circle"></i></div>
-                </div>
+            <div class="table-responsive">
+                <table class="comparison-table-styled">
+                    <thead>
+                        <tr>
+                            <th>Recursos</th>
+                            <th class="highlight-column">
+                                <img src="assets/logo2.svg" alt="Escrita360" class="table-logo-animated">
+                            </th>
+                            <th>Outras Plataformas</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Escrita Autorregulada</td>
+                            <td class="highlight-column"><i class="fas fa-check-circle text-success"></i></td>
+                            <td><i class="fas fa-times-circle text-danger"></i></td>
+                        </tr>
+                        <tr>
+                            <td>Painel de Sentimentos</td>
+                            <td class="highlight-column"><i class="fas fa-check-circle text-success"></i></td>
+                            <td><i class="fas fa-times-circle text-danger"></i></td>
+                        </tr>
+                        <tr>
+                            <td>Rubricas Autoavaliativas</td>
+                            <td class="highlight-column"><i class="fas fa-check-circle text-success"></i></td>
+                            <td><i class="fas fa-minus-circle text-warning"></i></td>
+                        </tr>
+                        <tr>
+                            <td>Processo Completo de Escrita</td>
+                            <td class="highlight-column"><i class="fas fa-check-circle text-success"></i></td>
+                            <td><i class="fas fa-times-circle text-danger"></i></td>
+                        </tr>
+                        <tr>
+                            <td>IA como Apoio (não substituição)</td>
+                            <td class="highlight-column"><i class="fas fa-check-circle text-success"></i></td>
+                            <td><i class="fas fa-times-circle text-danger"></i></td>
+                        </tr>
+                        <tr>
+                            <td>Dashboard para Escolas</td>
+                            <td class="highlight-column"><i class="fas fa-check-circle text-success"></i></td>
+                            <td><i class="fas fa-minus-circle text-warning"></i></td>
+                        </tr>
+                        <tr>
+                            <td>Alinhamento com BNCC</td>
+                            <td class="highlight-column"><i class="fas fa-check-circle text-success"></i></td>
+                            <td><i class="fas fa-minus-circle text-warning"></i></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
